--- a/style.css
+++ b/style.css
@@ -618,3 +618,16 @@ footer span a:hover{
         line-height: 38px;
     }
 }
+
+.button{
+    width: 100px;
+    height: 40px;
+    border: 2px solid crimson;
+    background: rgb(10, 10, 10);
+    color: #fff;
+    outline: none;
+    font-size: 15px;
+    border-radius: 6px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
